@@ -10,6 +10,11 @@
 	* src/gnome-cmd-user-actions.cc:
 	Do not assign CTRL+T as a default shortcut to advrename
 
+	* src/gnome-cmd-file-list.cc:
+	* src/gnome-cmd-file-list.h:
+	* src/gnome-cmd-file-selector.cc:
+	Rename signal "selection-changed" -> "files-changed"
+
 2008-10-15  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/intviewer/viewer-window.cc:
